# rust-stats

./: .gitignore  Cargo.toml  README.md
benchmarks/catch22_c/: README.md  bench_c.c
examples/: arima_workflow.rs  arimax.rs  bench.rs  bench_arima.rs  bench_arimax.rs  bench_auto_arima.rs  bench_catch22.rs  bench_scaling.rs  bench_transforms.rs  box_cox_workflow.rs  catch22_features.rs  decomposition.rs  holt_winters.rs  loess_smoothing.rs  longley.rs  min_max_scaler.rs  standard_scaler.rs  stationarity.rs
rust-stats-ols/: Cargo.toml
rust-stats-ols/examples/: bench.rs  longley.rs
rust-stats-ols/src/: arrow_compat.rs  error.rs  lib.rs
rust-stats-ols/src/regression/: mod.rs  predict.rs  results.rs  robust.rs  summary.rs
rust-stats-ols/tests/: arrow_compat.rs  builder.rs  design.rs  fit_basic.rs  goodness.rs  inference_classical.rs  inference_helper.rs  longley_nist.rs  names.rs  negative.rs  ols_golden.rs  predict.rs  properties.rs  robust.rs  smoke.rs  summary.rs
rust-stats-ols/tests/golden/: bench_statsmodels.py  generate.py  mtcars.json  rank_deficient.json  synthetic.json
src/: arrow_compat.rs  distributions.rs  error.rs  lib.rs  polars_compat.rs  transforms.rs
src/catch22/: features.rs  mod.rs
src/regression/: design.rs  mod.rs  ols.rs  predict.rs  results.rs  robust.rs  summary.rs
src/smoothing/: loess.rs  loess_batch.rs  mod.rs
src/tsa/: arima.rs  diagnostics.rs  holt_winters.rs  mod.rs  stationarity.rs
tests/: arima_statsmodels.rs  arrow_compat.rs  builder.rs  catch22_c_reference.rs  catch22_pycatch22.rs  design.rs  distributions.rs  fit_basic.rs  goodness.rs  holt_winters_r_statsmodels.rs  inference_classical.rs  inference_helper.rs  loess.rs  loess_golden.rs  longley_nist.rs  lowess_statsmodels.rs  names.rs  negative.rs  ols_golden.rs  parity_diagnostics.rs  polars_compat.rs  predict.rs  properties.rs  robust.rs  seasonal_decompose.rs  seasonal_decompose_golden.rs  seasonal_decompose_statsmodels.rs  smoke.rs  stl.rs  stl_golden.rs  stl_statsmodels.rs  summary.rs  transforms_r_statsmodels.rs
tests/golden/: bench_arima_r.R  bench_arima_statsmodels.py  bench_auto_arima_pmdarima.py  bench_catch22_pycatch22.py  bench_r.R  bench_scaling_r.R  bench_scaling_statsmodels.py  bench_statsmodels.py  catch22_constant_n200.json  catch22_near_constant_n200_seed0.json  catch22_normal_n10000_seed0.json  catch22_normal_n200_seed0.json  catch22_normal_n200_seed0_shortnames.json  catch22_normal_n200_seed1.json  catch22_normal_n200_seed1234.json  catch22_normal_n200_seed42.json  catch22_normal_n200_seed7.json  catch22_normal_n20_seed0.json  catch22_normal_n50_seed0.json  generate.py  heteroskedastic.json  loess_noisy_span30.json  loess_noisy_span50.json  loess_smooth_span30.json  loess_smooth_span50.json  longley.json  seasonal_decompose_airpassengers_additive.json  seasonal_decompose_airpassengers_multiplicative.json  seasonal_decompose_quarterly_additive.json  seasonal_decompose_quarterly_multiplicative.json  (+4 more)
(+14 files in other folders)
