[package]
name = "rust-stats"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust statistical modeling: LOESS, STL, seasonal_decompose"

[dependencies]
thiserror = "2"
rayon = "1.10"
arrow = { version = "58", optional = true, default-features = false }

[features]
default = []
arrow = ["dep:arrow"]
# Enable the cross-column SIMD LOESS kernel. Requires nightly Rust
# (uses the unstable `std::simd` / `portable_simd` API).
simd = []

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
approx = "0.5"
