[package]
name = "rust-stats-ols"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ordinary least squares regression for rust-stats"

[dependencies]
faer      = "0.22"
statrs    = "0.18"
thiserror = "2"
once_cell = "1"
arrow     = { version = "58", optional = true, default-features = false }

# rust-stats supplies the distribution helpers (t_cdf, t_quantile, ...).
rust-stats = { path = ".." }

[features]
default = []
arrow   = ["dep:arrow", "rust-stats/arrow"]

[dev-dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
approx     = "0.5"
